feat: add documentation delete operations
