# handler/response.go
@@ -43,3 +43,8 @@ type CreateOpeningResponse struct {
 	Message string `json:"message"`
 	Data schemas.OpeningResponse `json:"data"`
 }
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
